--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <body>
         <div id="wrapper"> <a href="index.html">
                 <div id="header" >
-                    <br>
-                    <img src="images/College-talks.png" />
+                <br>
+                    <img src="images/college-talks.png" />
                 </div>
             </a>
             <br>
@@ -37,7 +37,7 @@
                     <div class="text">
                         <p class="description"> <b>Episode 1: Retail Meets the Rich </b>
                             <br>
-                            We meet college students working in retail catering to the rich. Despite being avid city lovers, we break down the struggles of working in retail in a populated rich area known as Chelsea.. </p>
+                            We meet college students working in retail catering to the rich. Despite being avid city lovers, we break down the struggles of working in retail in a populated rich area known as Chelsea. </p>
                     </div>
                 </div>
                 <audio controls>
