--- a/index.html
+++ b/index.html
@@ -15,12 +15,10 @@
 
 
     <body>
-        <div id="wrapper"> <a href="index.html">
+        <div id="wrapper"> 
                 <div id="header" >
-                <br>
                     <img src="images/college-talks.png" />
                 </div>
-            </a>
             <br>
             <p id="menu">YesiCast</p>
             <div id="albums">
